# minimal-examples

./: .gitignore  README.md
Qt/fineSlider/: CMakeLists.txt  FineSlider.cpp  FineSlider.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
Qt/min-cmake/: CMakeLists.txt  MainWindow.h
Qt/static-lib-res/: CMakeLists.txt  MainWindow.cpp  README.md
Qt/static-lib-res/lib/: CMakeLists.txt  LibWindow.cpp  LibWindow.h
Qt/static-lib-res/res/: 1.qrc
Qt/static-lib-res6/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
Qt/static-lib-res6/lib/: CMakeLists.txt  LibWindow.cpp
Qt/static-lib-res6/lib/res/: 2.qrc
